added banner, nav css done

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             </ul>
         </nav>
     </header>
+    <div class="banner">
+        <p>Welcome to my first professional portfolio attempt. Everything is on here is constantly changing and being edited.</p>
+    </div>
 
 
 
