--- a/index.html
+++ b/index.html
@@ -10,31 +10,25 @@
 <body>
     <!-- navigation -->
     <header>
+        <!-- name and page reset -->
         <h1>
-            <a href="index.html">Lincoln Weiss</a>
+            <a href="./index.html">Lincoln Weiss</a>
         </h1>
-        <!-- right side navigation anchors -->
+        <!-- navigation -->
         <nav>
             <ul>
                 <li>
                     <a href="#about-me">About Me</a>
                 </li>
                 <li>
-                    <a href="#work">Previous Work</a>
+                    <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="#contact-info">Contact Info</a>
-                </li>
-                <li>
-                    <a href="#resume">Resume</a>
+                    <a href="#contact-me">Contact</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <div class="banner">
-        <p>Welcome to my first professional portfolio attempt. Everything is on here is constantly changing and being edited.</p>
-    </div>
-
 
 
 </body>
