fresh start header/nav

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <!-- name and page reset -->
         <h1>
-            <a href="./index.html">Lincoln Weiss</a>
+            Lincoln Weiss
         </h1>
         <!-- navigation -->
         <nav>
@@ -29,6 +29,10 @@
             </ul>
         </nav>
     </header>
+    <!--  -->
+    <div class="banner">
+        <p></p>
+    </div>
 
 
 </body>
