banner move finish

--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
             </ul>
         </nav>
     </header>
-    <!--  -->
-    <div class="banner">
-        <p></p>
-    </div>
+    <!-- banner -->
+    <section class="banner">
+                <p>***interesting text****</p>
+    </section>
+
+
 
 
 </body>
