--- a/index.html
+++ b/index.html
@@ -26,13 +26,27 @@
                 <li>
                     <a href="#contact-me">Contact</a>
                 </li>
+                <li>
+                    <a href="#resume">Resume</a>
+                </li>
             </ul>
         </nav>
     </header>
+
     <!-- banner -->
     <section class="banner">
+        <img src="./assets/prism-background.jpg" alt="">
                 <p>***interesting text****</p>
     </section>
+
+    <!-- begin content -->
+    <main>
+        <!-- about me -->
+        <div id="about-me">
+            <h1>About Me</h1>
+
+        </div>
+    </main>
 
 
 
