Last minute failure

--- a/index.html
+++ b/index.html
@@ -24,32 +24,70 @@
                     <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="#contact-me">Contact</a>
+                    <a href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a href="#resume">Resume</a>
+                    <a href="#">Resume</a>
                 </li>
             </ul>
         </nav>
     </header>
 
     <!-- banner -->
-    <section class="banner">
-                <p>***interesting text****</p>
-    </section>
+<section class="banner">
+    <h2>There are 10 types of people in the world. Those that understand binary, and false.</h2>
+</section>
 
-    <!-- begin content -->
-    <main>
-        <!-- about me -->
-        <div id="about-me">
-            <h1>About Me</h1>
+<!-- about me -->
+<section class="primary" id="about-me">
+    <h1 class="section-title">About Me</h1>
+    <p class="left-border">Something interesting to begin</p> <br>
+    <p class="left-border final">Follow it up with something crazy</p>
+</section>
 
+
+
+<!-- work -->
+<section class="primary" id="about-me">
+    <h1 class="section-title work">Work</h1>
+    <div class="flexbox-container">
+        <!-- Horesion Flex first flex -->
+        <div class="flex-item first-flex-item ">
+            <span class="flex-span"><a href="https://lincolnw90.github.io/Challenge01/">Horiseon Mock-Up Page</a><Horiseon class="com"></span> <br>
+            <span class="flex-span"><a href="https://lincolnw90.github.io/Challenge01/">Basic HTML, CSS</a></span>
         </div>
-    </main>
+        <!-- go buddy flex -->
+        <div class="flex-item gobuddy">
+            <span class="flex-span"><a href="https://lincolnw90.github.io/Run-Buddy-Website/">Go Buddy!!</a></span><br>
+            <span class="flex-span"><a href="https://lincolnw90.github.io/Run-Buddy-Website/">HTML, Advanced CSS</a></span>
+        </div>
+        <!-- Empty Flex -->
+        <div class="flex-item placeholder">
+            <span class="flex-span"> Next Project goes here</span><br>
+            <span class="flex-span">It'll be amazing</span>
+        </div>
+    </div>
+</section>
 
-
-
-
+<!-- contact info -->
+<section class="primary" id="contact">
+    <h1 class="section-title contact-title"> Contact Info</h1>
+    <nav>
+        <ul>
+            <li>
+                <a href="tel:2075227029">207-522-7029</a>
+            </li>
+            <li>
+                <a href="mail.to:lincoln.t.weiss@gmail.com">lincoln.t.weiss@gmail.com</a>
+            </li>
+            <li>
+                <a href="https://github.com/LincolnW90/.git">GitHub</a>
+            </li>
+    
+        </ul>
+    </nav>
+   
+</section>
 </body>
 
 </html>
