fixed run buddy link

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             <!-- run buddy -->
             <div class="flex-item">
-                <a href="https://lincolnw90.github.io/Challenge01/">
+                <a href="https://lincolnw90.github.io/Run-Buddy-Project/">
                 <div id="runbuddy">
                 </div>
                 </a>
